# raven-api

./: CLAUDE.md  README.md
Raven/: .env.example  .gitignore  CASE_STUDY.md  LICENSE  Procfile  README.md  SECURITY.md  TESTER_KIT.md  pyproject.toml  railway.toml  run_tests.py  uvicorn_err.txt  uvicorn_out.txt
Raven/scripts/: manage_beta.py  run_tester_kit.ps1  run_tester_kit.sh  validate_nova_product.py  validate_railway.ps1
Raven/src/raven/: __init__.py
Raven/src/raven/api/: auth.py  beta_keys.py  landing.html  main.py
Raven/src/raven/api/beta/: models.py  router.py  store.py
Raven/src/raven/api/v1/: __init__.py  enrichment.py  router.py
Raven/src/raven/sentinel/: __init__.py
Raven/src/raven/sentinel/core/: engine.py  models.py  rules.py
Raven/src/raven/sentinel/observability/: __init__.py  buffer.py
Raven/src/raven/sentinel/pipeline/: app.py  contracts.py
Raven/src/raven/sentinel/pipeline/action_layer/: notifier.py
Raven/src/raven/sentinel/pipeline/data_layer/: schemas.py
Raven/src/raven/sentinel/pipeline/intelligence_layer/: engine.py
Raven/src/raven/sentinel/pipeline/signal_layer/: normalizer.py
Raven/tests/: test_beta_impact.py  test_smoke.py  test_validate_resolution.py
data/: analyze_calls.jsonl
